# SPY-Python

./: .env.template  .gitignore  README.md  app.py  db_helper.py  pyproject.toml  requirements.txt
scripts/: load_spy_data.py
src/spy_python/: __init__.py  __main__.py  main.py  web_app.py
src/spy_python/charts/: __init__.py  chart.py  js_bridge.py  options.py  series.py
src/spy_python/config/: database.py  logging.py
src/spy_python/indicators/: saty_phase_oscillator.py
src/spy_python/models/: spy_data.py
src/spy_python/scripts/: load_sample_data.py
src/spy_python/services/: chart_service.py  data_service.py
src/spy_python/static/js/: chart.js
src/spy_python/templates/: index.html
templates/: index.html
